Snapshot, kind of working with minimize function

--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -24,7 +24,8 @@
     "import Functions.data_tools as data_tools\n",
     "from Functions.temple_data import TempleData\n",
     "from Functions.artifact_removal_tool import ART\n",
-    "from Functions import eeg_quality_index as eqi"
+    "from Functions import eeg_quality_index as eqi\n",
+    "from Functions import optimization as optimization"
    ]
   },
   {
@@ -76,11 +77,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Settings\n",
     "# - Temple data\n",
     "artifact_type = \"eyem\"  # Type of artifact to process\n",
@@ -142,52 +142,128 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "a = eqi.scoring(\n",
-    "            clean_eeg = clean_avg[subset_chans,:],\n",
-    "            test_eeg = test_eeg,\n",
-    "            srate_clean = temple.srate,\n",
-    "            srate_test = temple.srate,\n",
-    "            window = int(window_samples // 10),\n",
-    "            slide = int(window_samples // 20)\n",
-    "        )[0]  "
+    "## Optimization example"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[0., 0., 0., 0., 0., 2., 0., 0.]])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\danie\\Documents\\Projects\\art-eqi-p300-validation\\Functions\\eeg_quality_index.py:83: RuntimeWarning: divide by zero encountered in divide\n",
+      "  z_scores = np.floor(np.abs((eqi_test-mean_eqi_clean)/std_eqi_clean)) # Calculate z-scores\n",
+      "c:\\Users\\danie\\Documents\\Projects\\art-eqi-p300-validation\\Functions\\eeg_quality_index.py:83: RuntimeWarning: invalid value encountered in divide\n",
+      "  z_scores = np.floor(np.abs((eqi_test-mean_eqi_clean)/std_eqi_clean)) # Calculate z-scores\n",
+      "c:\\Users\\danie\\Documents\\Projects\\art-eqi-p300-validation\\Functions\\eeg_quality_index.py:83: RuntimeWarning: divide by zero encountered in divide\n",
+      "  z_scores = np.floor(np.abs((eqi_test-mean_eqi_clean)/std_eqi_clean)) # Calculate z-scores\n",
+      "c:\\Users\\danie\\Documents\\Projects\\art-eqi-p300-validation\\Functions\\eeg_quality_index.py:83: RuntimeWarning: invalid value encountered in divide\n",
+      "  z_scores = np.floor(np.abs((eqi_test-mean_eqi_clean)/std_eqi_clean)) # Calculate z-scores\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning!\n",
+      "One or more Z-scores have NaN values\n",
+      "Review eqi_mean carefully\n",
+      " result 71.05263157894737\n",
+      "Warning!\n",
+      "One or more Z-scores have NaN values\n",
+      "Review eqi_mean carefully\n",
+      " result 71.05263157894737\n",
+      "Warning!\n",
+      "One or more Z-scores have NaN values\n",
+      "Review eqi_mean carefully\n",
+      " result 71.05263157894737\n",
+      "Warning!\n",
+      "One or more Z-scores have NaN values\n",
+      "Review eqi_mean carefully\n",
+      " result 71.05263157894737\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\danie\\Documents\\Projects\\art-eqi-p300-validation\\Functions\\eeg_quality_index.py:83: RuntimeWarning: divide by zero encountered in divide\n",
+      "  z_scores = np.floor(np.abs((eqi_test-mean_eqi_clean)/std_eqi_clean)) # Calculate z-scores\n",
+      "c:\\Users\\danie\\Documents\\Projects\\art-eqi-p300-validation\\Functions\\eeg_quality_index.py:83: RuntimeWarning: invalid value encountered in divide\n",
+      "  z_scores = np.floor(np.abs((eqi_test-mean_eqi_clean)/std_eqi_clean)) # Calculate z-scores\n",
+      "c:\\Users\\danie\\Documents\\Projects\\art-eqi-p300-validation\\Functions\\eeg_quality_index.py:83: RuntimeWarning: divide by zero encountered in divide\n",
+      "  z_scores = np.floor(np.abs((eqi_test-mean_eqi_clean)/std_eqi_clean)) # Calculate z-scores\n",
+      "c:\\Users\\danie\\Documents\\Projects\\art-eqi-p300-validation\\Functions\\eeg_quality_index.py:83: RuntimeWarning: invalid value encountered in divide\n",
+      "  z_scores = np.floor(np.abs((eqi_test-mean_eqi_clean)/std_eqi_clean)) # Calculate z-scores\n"
+     ]
     }
    ],
    "source": [
-    "eqi_total"
+    "# Settings\n",
+    "# - Temple data\n",
+    "artifact_type = \"eyem\"  # Type of artifact to process\n",
+    "test_percentage = 20    # Percentage of artifact to use as test [\\%]\n",
+    "split_seed = 42         # Seed for reproducibility\n",
+    "window_length = 5       # Length of window data [sec]\n",
+    "\n",
+    "window_samples = int(window_length * temple.srate)\n",
+    "\n",
+    "# - Optimization parameters\n",
+    "n_clusters = (1, 6)\n",
+    "fd_threshold = (1, 3)\n",
+    "ssa_threshold = (0.005, 0.02)\n",
+    "\n",
+    "\n",
+    "# n_clusters = slice(1, 6, 1)\n",
+    "# fd_threshold = slice(1, 3, 0.2)\n",
+    "# ssa_threshold = slice(0.005, 0.02, 0.005)\n",
+    "\n",
+    "# Get artifacts\n",
+    "artifacts_file = fr\"Data\\\\Temple\\\\csv\\\\labels_{temple.montage_type}.csv\"\n",
+    "temple.get_artifacts_from_csv(artifacts_file)\n",
+    "[artifacts_chans, artifacts_data] = temple.get_artifact_type_data(\n",
+    "    artifact_type = artifact_type,\n",
+    "    window_length = window_length,\n",
+    "    )\n",
+    "\n",
+    "# Get clean data\n",
+    "clean = temple.get_clean_data(window_length)\n",
+    "clean_avg = clean[0,:,:]\n",
+    "# clean_avg = np.mean(clean, axis=0) * clean.shape[0]\n",
+    "\n",
+    "# Optimize ART parameters\n",
+    "for a,artifact in enumerate(artifacts_chans):\n",
+    "    # Get subset of channels based on artifact\n",
+    "    subset_chans = [temple.ch_names.index(chan) for chan in artifact if chan in temple.ch_names]\n",
+    "\n",
+    "    x0 = (4, 2, 0.01)\n",
+    "    bounds = (n_clusters, fd_threshold, ssa_threshold)\n",
+    "    args = (\n",
+    "        clean_avg[subset_chans,:],\n",
+    "        artifacts_data[a,:,:], \n",
+    "        temple.srate,\n",
+    "        window_length\n",
+    "        )\n",
+    "    res = optimization.optimize_to_eqi(\n",
+    "        x0 = x0,\n",
+    "        bounds = bounds,\n",
+    "        args = args\n",
+    "        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(len(subset_chans))\n",
-    "t = np.linspace(0, clean_avg.shape[1]/temple.srate, int(clean_avg.shape[1]))\n",
-    "\n",
-    "for c,chan in enumerate(subset_chans):\n",
-    "    ax[c].plot(t, clean_avg[c,:])"
+    "res"
    ]
   },
   {
