Error on n_samples <= n_clusters

--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -25,7 +25,12 @@
     "from Functions.temple_data import TempleData\n",
     "from Functions.artifact_removal_tool import ART\n",
     "from Functions import eeg_quality_index as eqi\n",
-    "from Functions import optimization as optimization"
+    "from Functions import optimization as optimization\n",
+    "\n",
+    "\n",
+    "# Magic command to automatically reload modules\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2 "
    ]
   },
   {
