Updated notebook to get support figures

--- a/support_figures.ipynb
+++ b/support_figures.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EQI Schematic\n",
+    "# Support figures\n",
     "\n",
-    "This file is used to get the EEG trace and normal distribution used to make the image similar to the EQI paper schematic"
+    "This file is used to get some sections of the support figures found in the paper."
    ]
   },
   {
@@ -20,19 +20,21 @@
     "from scipy.stats import norm\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from Functions.temple_data import TempleData\n"
+    "from Functions.temple_data import TempleData"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EEG trace"
+    "# EEG Quality Index scoring system figure\n",
+    "\n",
+    "## EEG trace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +76,7 @@
     "ax.set_ylim(-2e-4, 2e-4)\n",
     "fig.set_figwidth(20)\n",
     "\n",
-    "plt.savefig(r\"Figures\\rawEEG.svg\", format=\"svg\")\n",
+    "plt.savefig(r\"Figures\\\\rawEEG.svg\", format=\"svg\")\n",
     "plt.tight_layout()"
    ]
   },
@@ -82,12 +84,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Normal distribution"
+    "## Normal distribution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -128,18 +130,11 @@
     "plt.title('Normal distribution with mean 0 and standard deviation 1')\n",
     "\n",
     "# save the figure as an svg file\n",
-    "plt.savefig(r'Figures\\normal_distribution.svg', format='svg')\n",
+    "plt.savefig(r'Figures\\\\normal_distribution.svg', format='svg')\n",
     "\n",
     "# show the plot\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
